--- a/basicGanToGenerateName.ipynb
+++ b/basicGanToGenerateName.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from torch.utils.data import Dataset, DataLoader"
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch.nn.functional as F"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NameDataset(Dataset):\n",
-    "    def __init__(self, csv_file=\"Indian-Female-Names.csv\"):\n",
+    "    def __init__(self, csv_file=\"Indian-Female-Names.csv\", length=5):\n",
     "        \"\"\"\n",
     "        Arguments:\n",
     "            csv_file (string): Path to the csv file.\n",
     "        \"\"\"\n",
     "        data = pd.read_csv(csv_file)\n",
-    "        self.data = [data.iloc[i]['name'] for i in range(len(data)) if len(str(data.iloc[i]['name']))==5]\n",
+    "        self.data = [data.iloc[i]['name'] for i in range(len(data)) if len(str(data.iloc[i]['name']))==length]\n",
     "    def __len__(self):\n",
     "        return len(self.data)\n",
     "    def _toNP(self, data:list[str]):\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,22 +70,23 @@
     "latent_dim = 32\n",
     "inp_dim = 5*26\n",
     "batch_size = 32\n",
-    "num_epochs = 64"
+    "num_epochs = 64\n",
+    "length = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = NameDataset()\n",
+    "dataset = NameDataset(length=length)\n",
     "loader = DataLoader(dataset, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -723,23 +725,24 @@
      "output_type": "stream",
      "text": [
       "Training dataset...\n",
-      "seema nikki swati sonia seema reema radha sapna \n",
-      "laxmi salma pinky panku pooja aarti deepa roopa \n",
-      "deepa suman seema mercy naina deepa laxmi arshi \n",
-      "kanta nisha rekha geeta priti komal "
+      "payal[0.63] meena[0.66] guddi[0.58] nisha[0.77] priya[0.93] manju[0.89] sonia[0.73] pooja[0.94] \n",
+      "reena[0.70] seema[0.74] aasma[0.33] husno[0.35] anshu[0.64] durga[0.56] suman[0.90] rakhi[0.71] \n",
+      "seema[0.74] heena[0.74] laxmi[0.87] seema[0.74] pooja[0.94] rekha[0.75] pooja[0.94] laxmi[0.87] \n",
+      "rinki[0.87] kajal[0.81] aysha[0.19] sabbo[0.26] parul[0.39] anjum[0.71] rekha[0.75] rosan[0.38] \n"
      ]
     }
    ],
    "source": [
     "print(\"Training dataset...\")\n",
-    "for i, name in enumerate([''.join([chr(c+96+1) for c in i]) for i in real.cpu().numpy().reshape(-1, 5, 26).argmax(2)]):\n",
-    "    print(name, end=' ')\n",
+    "for batch_idx, real in enumerate(loader): break\n",
+    "for i, (name,score) in enumerate(zip([''.join([chr(c+96+1) for c in i]) for i in real.cpu().numpy().reshape(-1, 5, 26).argmax(2)], disc(real.to(device).reshape(-1, inp_dim)))):\n",
+    "    print(f\"{name}[{score.item():.2f}]\", end=' ')\n",
     "    if(i+1)%8==0: print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -747,10 +750,10 @@
      "output_type": "stream",
      "text": [
       "Generating some names...\n",
-      "kamal[0.26] rumli[0.21] reena[0.43] reena[0.49] pooja[0.30] seena[0.24] resha[0.36] rarhi[0.27] \n",
-      "sayma[0.27] kumal[0.42] kajal[0.31] risha[0.32] mumla[0.26] sumla[0.20] sakha[0.19] panni[0.27] \n",
-      "sajal[0.26] kadal[0.36] rosha[0.27] saxma[0.20] nirha[0.40] reeha[0.40] panai[0.27] sasha[0.18] \n",
-      "pooja[0.42] gamna[0.20] geeta[0.21] gamna[0.15] gumla[0.35] samaa[0.34] andta[0.21] poola[0.24] \n",
+      "sumla[0.56] gakda[0.41] gumaa[0.46] sakha[0.52] ranui[0.39] samta[0.56] nirla[0.55] runui[0.46] \n",
+      "nisha[0.77] sanma[0.52] pinla[0.52] aniya[0.77] geeta[0.74] seema[0.74] rakhi[0.71] pooha[0.54] \n",
+      "sapna[0.66] ranhi[0.49] sumha[0.41] reena[0.70] aeeta[0.47] sanma[0.52] meeha[0.44] seema[0.74] \n",
+      "kiran[0.89] sanma[0.52] kajal[0.81] rarhi[0.47] samoa[0.35] seeha[0.45] kiran[0.89] kajal[0.81] \n",
       "\n",
       "****************************************************************\n"
      ]
@@ -759,7 +762,7 @@
    "source": [
     "with torch.no_grad():\n",
     "    fake = gen(torch.randn((batch_size, latent_dim)).to(device))\n",
-    "    scores = disc(fake).view(-1).cpu().numpy()\n",
+    "    scores = disc((F.one_hot(fake.reshape(-1, 5, 26).argmax(2), num_classes=26)/1).reshape(-1, inp_dim)).view(-1).cpu().numpy()\n",
     "    print(\"Generating some names...\")\n",
     "    for i, name in enumerate([''.join([chr(c+96+1) for c in i]) for i in fake.cpu().numpy().reshape(-1, 5, 26).argmax(2)]):\n",
     "        print(f\"{name}[{scores[i]:.2f}]\", end=' ')\n",
@@ -769,141 +772,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n",
-      "Generating some names...\n"
+      "Generating some best names...\n",
+      "pooja[0.94]\n",
+      "suman[0.90]\n",
+      "manju[0.89]\n",
+      "kuman[0.84]\n",
+      "meetu[0.83]\n",
+      "kajal[0.81]\n",
+      "anita[0.79]\n",
+      "suran[0.77]\n",
+      "geeta[0.74]\n",
+      "seema[0.74]\n",
+      "aarti[0.74]\n",
+      "kiral[0.72]\n",
+      "rakhi[0.71]\n",
+      "kijal[0.71]\n",
+      "sooja[0.71]\n",
+      "anina[0.70]\n",
+      "reena[0.70]\n",
+      "ninka[0.69]\n",
+      "mooja[0.69]\n",
+      "rekhi[0.69]\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_k = 20\n",
+    "with torch.no_grad():\n",
+    "    data = []\n",
+    "    fake = gen(torch.randn((batch_size*10, latent_dim)).to(device))\n",
+    "    scores = disc((F.one_hot(fake.reshape(-1, 5, 26).argmax(2), num_classes=26)/1).reshape(-1, inp_dim)).view(-1).cpu().numpy()\n",
+    "    print(\"Generating some best names...\")\n",
+    "    for i, name in enumerate([''.join([chr(c+96+1) for c in i]) for i in fake.cpu().numpy().reshape(-1, 5, 26).argmax(2)]): \n",
+    "        if name not in [i[0] for i in data]:\n",
+    "            data.append((name, scores[i]))\n",
+    "\n",
+    "    print('\\n'.join([f\"{i[0]}[{i[1]:.2f}]\" for i in sorted(data, key=lambda x: x[1], reverse=True)][:top_k]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving data...\n"
      ]
     }
    ],
@@ -914,16 +837,15 @@
     "with torch.no_grad():\n",
     "    for _ in range(128):\n",
     "        fake = gen(torch.randn((batch_size, latent_dim)).to(device))\n",
-    "        scores = disc(fake).view(-1).cpu().numpy()\n",
+    "        scores = disc((F.one_hot(fake.reshape(-1, 5, 26).argmax(2), num_classes=26)/1).reshape(-1, inp_dim)).view(-1).cpu().numpy()\n",
     "        \n",
-    "        print(\"Generating some names...\")\n",
     "        for i, name in enumerate([''.join([chr(c+96+1) for c in i]) for i in fake.cpu().numpy().reshape(-1, 5, 26).argmax(2)]):\n",
     "            score = scores[i]\n",
     "            if score>=alpha_score:\n",
     "                if name not in data:\n",
     "                    data.append(name)\n",
     "                    data_score.append(score)\n",
-    "        \n",
+    "print(\"saving data...\")\n",
     "with open('output.txt', 'w') as f: \n",
     "    f.write('\\n'.join( [f\"{i} {s:.2f}\" for i, s in sorted([(i, s) for i, s in zip(data, data_score)], key=lambda x: x[1], reverse=True)] ))"
    ]
